--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,78 +1,112 @@
-#logo
-{
-    height:140px;
-    width:170px;
-}
-body{
+/* General body styling */
+body {
     background-color: rgb(237, 251, 255);
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
 }
-#logo img
-{
-    height:140px;
-    width:170px;
+
+/* Logo styling */
+#logo {
+    text-align: center;
+    margin-bottom: 20px;
 }
-#login
-{
-    height:450px;
-    width:350px;
-    border:1px solid #ffffff;
-    margin-left:580px;
+
+#logo img {
+    height: 140px;
+    width: 170px;
+}
+
+/* Login container styling */
+#login {
+    width: 350px;
+    height: 450px;
+    border: 1px solid #ffffff;
     background-color: #f3f3f3;
-}
-input[type="email"]
-{
-    height:30px;
-    width:190px;
-    margin-left:40px;
-    margin-bottom:10px;
-    margin-top:40px;
-    padding-left:80px;
-
-}
-input[type="password"]
-{
-    height:30px;
-    width:190px;
-    margin-left:40px;
-    margin-top:20px;
-    padding-left:80px;
+    padding: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: center;
 }
 
-#loginbox
-{
-    height:4px;
-    width:90px;
-    border:1px solid black;
-    background-color:black;
-    color:white;
-    padding-bottom:35px;
-    border-radius:5px;
-}
-a{
-    text-decoration:none;
-}
-#logging
-{
-    margin-left:130px;
-    height:0px;
-    width:0px;
-    margin-top:55px;
-}
-#loginbox h3{
-    padding-left:20px;
-    margin-top:9px;
-}
-#sign_upbox p
-{
-    height:24px;
-    width:157px;
-    display:inline;
-    color:black;
-    margin-left:79px;
-}
-#sign_upbox h3{
-    color:blue;
-    width:70px;
-    display:inline;
+input[type="email"],
+input[type="password"] {
+    height: 30px;
+    width: 250px;
+    margin-top: 20px;
+    padding-left: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
+#loginbox {
+    height: 40px;
+    width: 90px;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 30px auto 0;
+}
+
+#loginbox h3 {
+    margin: 0;
+}
+
+#sign_upbox p {
+    color: black;
+}
+
+#sign_upbox h3 {
+    color: blue;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+    #login {
+        width: 80%;
+        height: auto;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+        width: 80%;
+    }
+
+    #loginbox {
+        width: 80px;
+    }
+
+    #logo img {
+        width: 150px;
+        height: 120px;
+    }
+}
+
+@media (max-width: 480px) {
+    #login {
+        width: 90%;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+        width: 90%;
+    }
+
+    #loginbox {
+        width: 70px;
+    }
+
+    #logo img {
+        width: 120px;
+        height: 100px;
+    }
+}
