--- a/CSS/home.css
+++ b/CSS/home.css
@@ -68,135 +68,96 @@ input[type="search"]
 
 #left
 {
-    height:570px;
-    width:250px;
-    border:1px solid rgb(255, 255, 255);
+    height:581px;
+    width:120px;
+    border:0px solid rgb(214, 214, 214);
     margin-top:120px;
     position:fixed;
-    border-radius:0px;
+    margin-left:35px;
+    border-radius:100px;
     background-color:rgb(244, 243, 243);
 }
 a{
     text-decoration:none;
 }
-#home
-{
-    height:0px;
-    width:0px;
-}
-#HOME
-{
-    height:30px;
-    width:200px;
-    background-color:rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    border:1px solid rgb(196, 196, 196);
-    margin-left:15px;
-    margin-top:30px;
-    padding-bottom:29px;
+#home img{
+    height:40px;
+    width:40px;
+    padding:5px;
+    background-color:rgb(239, 239, 239);
+    border:2px solid rgb(214, 214, 214);
     border-radius:10px;
+    margin-left:25px;
+    margin-top:50px;
+    padding:15px;
 }
-#home :hover{
-    background-color:rgb(255, 255, 255);
-    color:rgb(0, 0, 0);
-    border-radius:50px;
-    background-color:rgb(196, 196, 196);
-}
-#HOME h4{
-    text-align:center;
-}
-#politics
-{
-    height:0px;
-    width:0px;
-}
-#POLITICS
-{
-    height:30px;
-    width:200px;
-    background-color:rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    border:1px solid rgb(196, 196, 196);
-    margin-left:15px;
-    padding-bottom:29px;
-    border-radius:10px;
-    margin-top:90PX;
-}
-#politics :hover{
-    background-color:rgb(196, 196, 196);
-    color:white;
-    color:black;
-    border-radius:50px;
-}
-#POLITICS h4{
-    text-align:center;
-}
-#post
-{
-    height:0px;
-    width:0px;
-}
-#POST
-{
-    height:30px;
-    width:200px;
-    background-color:rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    border:1px solid rgb(196, 196, 196);
-    margin-left:15px;
-    padding-bottom:29px;
-    border-radius:10px;
-    margin-top:90PX;
-}
-#post :hover{
-    background-color:rgb(196, 196, 196);
-    color:white;
-    color:black;
-    border-radius:50px;
-}
-#POST h4{
-    text-align:center;
-}
-#short
-{
-    height:0px;
-    width:0px;
-}
-#SHORT
-{
-    height:30px;
-    width:200px;
-    background-color:rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    border:1px solid rgb(196, 196, 196);
-    margin-left:15px;
-    padding-bottom:29px;
-    border-radius:10px;
-    margin-top:90PX;
-}
-#short :hover{
-    background-color:rgb(196, 196, 196);
-    color:white;
-    color:black;
-    border-radius:50px;
-}
-#SHORT h4{
-    text-align:center;
+#home img:hover{
+    background-color:rgb(217, 217, 217);
 }
 
 
-#profile
-{
-    height:0px;
-    width:0px;
+
+#political img{
+    height:40px;
+    width:42px;
+    padding:5px;
+    background-color:rgb(239, 239, 239);
+    border:2px solid rgb(214, 214, 214);
+    border-radius:10px;
+    margin-left:25px;
+    margin-top:40px;
+    padding:15px;
 }
-#PROFILE img
-{
-   margin-top:100px;
-   height:100px;
-   width:99px;
-   margin-left:65px;
-   border-radius:50px;
+#political img:hover{
+    background-color:rgb(217, 217, 217);
+}
+
+#short img{
+    height:40px;
+    width:42px;
+    padding:5px;
+    background-color:rgb(239, 239, 239);
+    border:2px solid rgb(214, 214, 214);
+    border-radius:10px;
+    margin-left:25px;
+    margin-top:35px;
+    padding:15px;
+    padding-top:12px;
+}
+#short img:hover{
+    background-color:rgb(217, 217, 217);
+}
+
+
+#profile img{
+    height:40px;
+    width:42px;
+    padding:5px;
+    border:2px solid rgb(214, 214, 214);
+    border-radius:10px;
+    background-color: rgb(239, 239, 239);
+    margin-left:25px;
+    margin-top:35px;
+    padding:15px;
+    padding-top:10px;
+}
+#profile img:hover{
+    background-color:rgb(217, 217, 217);
+}
+#setting img{
+    height:40px;
+    width:42px;
+    padding:5px;
+    border:2px solid rgb(214, 214, 214);
+    border-radius:10px;
+    background-color: rgb(239, 239, 239);
+    margin-left:25px;
+    margin-top:35px;
+    padding:15px;
+    padding-top:10px;
+}
+#setting img:hover{
+    background-color:rgb(217, 217, 217);
 }
 #right
 {
