--- a/CSS/protest.css
+++ b/CSS/protest.css
@@ -132,9 +132,11 @@
     background-color: rgb(255, 255, 255);
 }
 #right video{
+    height:550px;
+    width:650px;
     margin-left:50px;
     border:1px solid rgb(184, 184, 184);
-    border-radius:40px;
+    border-radius:50px;
     margin-top:1px;
     float:left;
 }
