--- a/CSS/home.css
+++ b/CSS/home.css
@@ -209,6 +209,9 @@ iframe
     border:1px solid rgb(196, 196, 196);
     border-top-left-radius:40px;
     border-top-right-radius:40px;
+    box-shadow:3px 8px 20px black;
+    border-bottom-left-radius:40px;
+    border-bottom-right-radius:40px;
     
 }
 #content
