--- a/CSS/politics.css
+++ b/CSS/politics.css
@@ -129,7 +129,6 @@
 #right
 {
     height:10000px;
-   
     width:800px;
     border:1px solid rgb(188, 188, 188);
     float:right;
@@ -137,5 +136,15 @@
     margin-right:300px;
     background-color:rgb(236, 236, 236);
     margin-top:30px;
+}
+#video
+{
+    height: 600px;
+    width:450px;
+    margin-left:180px;
+    margin-top:80px;
+    border-radius:60px;
+    border:1px solid black;
+    box-shadow:2px 3px 7px black;
 }
 
